# music-processing-challenge

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  dvc.yaml  dvclive.json  metrics.json  params.yaml  pyproject.toml  requirements.txt
.dvc/: config
challenges/: train_val_split.py  utils.py
challenges/beat-detection/: dvc.yaml  eval_beats.py  filter_onsets.py
challenges/onset-detection/: combine_features_to_dataframe.py  dvc.yaml  eval_onsets.py  extract_features.py  prepare_labels.py  test.py  train.py
challenges/tempo-detection/: eval_tempo.py
challenges/tempo-estimation/: dvc.yaml  estimate.py  eval_tempo.py
data/processed/: .gitignore
data/raw/: .gitignore  test.dvc  train.dvc  train_extra_onsets.dvc  train_extra_tempobeats.dvc
docs/journals/: 2022_04_24.md
docs/logseq/: config.edn
docs/pages/: Beat Detection 🎶.md  Challenges 🏆.md  Onset Detection 🔊.md  Project Management 📆.md  Tempo Detection 🕰️.md
dvc_plots/: index.html
dvclive/: report.html
dvclive/scalars/: accuracy.tsv  epoch.tsv
notebooks/: 00-fastai-onset-detection.ipynb  01-librosa-data-exploration.ipynb  02-alive-progress.ipynb  03-madmom-processors.ipynb  04-feature-extraction.ipynb  05-data-exploration.ipynb  06-fastai-tabular.ipynb  07-validation-plots.ipynb  08-understanding-framed-signal.ipynb  09-pandas-ewm.ipynb  10-beat-fitting.ipynb  11-joblib.ipynb  12-reducing-the-search-space.ipynb  diff.txt  flux.txt
notebooks/models/: tabular.pth
reports/: .gitignore  val-df.csv
reports/beat-detection/: .gitignore  metrics.json  val-targets.json
reports/onset-detection/: dvclive.json  metrics.json  onset-challenge.pptx  onset-detection-report.docx  val-df.csv
(+149 files in other folders)
