[tool.poetry]
name = "music-processing"
version = "0.0.1"
description = "JKU special topics - Audio and Music Processing challenge"
authors = ["Laurenz <laurenz@hey.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "~3.9"
scipy = "^1.8.0"
librosa = "^0.9.1"
dvc = "^2.10.1"
loguru = "^0.6.0"
typer = "^0.4.1"
madmom = "^0.16.1"
mir_eval = "^0.7"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
pylint = "^2.13.7"
isort = "^5.10.1"
pre-commit = "^2.18.1"
jupyterlab = "^3.3.4"
snoop = "^0.4.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
