[tool.poetry]
name = "music-processing"
version = "1.0.0"
description = "JKU special topics - Audio and Music Processing challenge"
authors = ["Laurenz <laurenz@hey.com>"]
license = "MIT"
repository = "https://github.com/LaurenzBeck/music-processing-challenge"
packages = [{ include = "challenges" }]

[tool.poetry.dependencies]
python = "~3.9"
scipy = "^1.8.0"
dvc = "^2.10.1"
loguru = "^0.6.0"
typer = "^0.4.1"
madmom = "^0.16.1"
mir_eval = "^0.7"
alive-progress = "^2.4.1"
librosa = "^0.9.1"
matplotlib = "^3.5.2"
fastai = "^2.6.3"
scikit-learn = "^1.1.0"
altair = "^4.2.0"
dvclive = "^0.8.2"
joblib = "^1.1.0"
numba = "^0.55.2"


[tool.poetry.dev-dependencies]
black = {version="^22.3.0", extras=["jupyter"]}
pylint = "^2.13.7"
isort = "^5.10.1"
pre-commit = "^2.18.1"
ipykernel = "^6.13.0"
traitlets = "^5.2.0"
notebook = "^6.4.11"
jupyterlab = "^3.3.4"
snoop = "^0.4.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
